syntax = "proto3";
package chadbot;
option go_package = "github.com/fipso/chadbot/gen/chadbot";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// Event subscription request
message EventSubscribe {
  repeated string event_types = 1; // e.g., "chat.message.*", "calendar.*"
}

// Event emission from plugin
message EventEmit {
  Event event = 1;
}

// Event dispatch to plugin
message EventDispatch {
  Event event = 1;
}

// Generic event wrapper
message Event {
  string event_type = 1;
  string source_plugin = 2;
  google.protobuf.Timestamp timestamp = 3;
  oneof data {
    ChatMessageEvent chat_message = 4;
    GenericEvent generic = 5;
  }
}

// Chat message event (common across platforms)
message ChatMessageEvent {
  string platform = 1;    // "whatsapp", "telegram", "pwa"
  string chat_id = 2;
  string message_id = 3;
  string sender_id = 4;
  string sender_name = 5;
  string content = 6;
  string content_type = 7; // "text", "voice", "image"
  string reply_to = 8;     // optional message ID
  map<string, string> metadata = 9;
}

// Generic event for extensibility
message GenericEvent {
  string event_name = 1;
  google.protobuf.Struct payload = 2;
}
